[Update] Correctly load headline spacings with custom properties

--- a/public/framework/scss/_layout/_headline-spacing.scss
+++ b/public/framework/scss/_layout/_headline-spacing.scss
@@ -7,7 +7,7 @@
 }
 
 div[class*="hl-mb-"] {
-  --hl-mb: 1rem;
+  margin-bottom: var(--hl-mb);
 }
 
 $hl-bps: map-merge((0:0),$breakpoints);
